# Encounterra

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_batch  Dockerfile_ecs  Makefile  README.md  assume.sh  batch_entrypoint.py  core_entrypoint.py  count_lines.sh  crash_fetcher.py  crash_test.py  create_zip.sh  dpr_calculator.py  ecs_core_entrypoint.py  event_bridge_cleanup.sh  exception_1703619757.txt  extract_cache.sh  lambda_function.py  main.py  numba_functions.py  numba_test.py  pyproject.toml  requirements.txt
.blaze-cmake/: blaze-config.cmake  blaze-targets.cmake
.github/: copilot-instructions.md
RL/: faurung_env.py  faurung_main.py  faurung_obs.py  totem_barbarian_5lvl_env.py  trainee_faurung.py
aggregation/: Dockerfile  Dockerfile_ecs  Makefile  aggregate_results.py  aggregate_results_ecs.py  pyproject.toml
c++/: .clang-format  AGENTS.md  CMakeLists.txt  README.md  main.cpp  random_matchup.cpp
c++/abilities/: action_surge.cpp  action_surge.hpp  bardic_inspiration.cpp  bardic_inspiration.hpp  cutting_words.cpp  cutting_words.hpp  lay_on_hands.cpp  lay_on_hands.hpp  on_hit_divine_smite.cpp  on_hit_divine_smite.hpp  on_hit_effect.hpp  on_hit_grapple.cpp  on_hit_grapple.hpp  on_hit_mastery.cpp  on_hit_mastery.hpp  on_hit_prone.cpp  on_hit_prone.hpp  on_hit_saving_throw_dmg.cpp  on_hit_saving_throw_dmg.hpp  on_hit_sneak_attack.cpp  on_hit_sneak_attack.hpp  pounce.cpp  pounce.hpp  rage.cpp  rage.hpp  reckless_attack.cpp  reckless_attack.hpp  riposte.hpp  roar.cpp  roar.hpp  second_wind.cpp  second_wind.hpp  vow_of_enmity.cpp  vow_of_enmity.hpp  weapon_mastery_effects.cpp  weapon_mastery_effects.hpp  wildshape.cpp  wildshape.hpp  wildshape_utils.cpp  wildshape_utils.hpp
c++/actions/: action_constants.hpp  action_dag.cpp  action_dag.hpp  action_fsm.cpp  action_fsm.hpp  action_plan_strategy.hpp  action_proto_dag.cpp  action_proto_dag.hpp  action_proto_fsm.cpp  action_proto_fsm.hpp  action_protodag.cpp  action_protodag.hpp  action_selection.cpp  action_selection.hpp  action_types.hpp  attack.cpp  attack.hpp  break_grapple.cpp  break_grapple.hpp  dash.cpp  dash.hpp  default_action_plan_strategy.cpp  default_action_plan_strategy.hpp  disenage.cpp  disengage.cpp  disengage.hpp  dodge.cpp  dodge.hpp  dummy_actoid.hpp  dummy_actoid_factory.hpp  hide.cpp  hide.hpp  melee_attack.cpp  melee_attack.hpp  menacing_melee_attack.cpp  menacing_melee_attack.hpp  movement.cpp  movement.hpp  ranged_attack.cpp  ranged_attack.hpp  (+3 more)
c++/combatants/: acolyte.cpp  acolyte.hpp  assassin_rogue_lvl_3.cpp  assassin_rogue_lvl_3.hpp  assassin_rogue_lvl_4.cpp  assassin_rogue_lvl_4.hpp  assassin_rogue_lvl_5.cpp  assassin_rogue_lvl_5.hpp  bard_college_of_lore_lvl_3.cpp  bard_college_of_lore_lvl_3.hpp  battlemaster_fighter_lvl_3.cpp  battlemaster_fighter_lvl_3.hpp  battlemaster_fighter_lvl_4.cpp  battlemaster_fighter_lvl_4.hpp  battlemaster_fighter_lvl_5.cpp  battlemaster_fighter_lvl_5.hpp  brown_bear.cpp  brown_bear.hpp  bugbear.cpp  bugbear.hpp  bugbear2014.cpp  bugbear2014.hpp  bugbear_warrior.cpp  bugbear_warrior.hpp  chimera.cpp  chimera.hpp  cleric_lvl_1.cpp  cleric_lvl_1.hpp  cultist_fanatic.cpp  cultist_fanatic.hpp  dire_wolf.cpp  dire_wolf.hpp  draconic_sorcerer_lvl_1.cpp  draconic_sorcerer_lvl_1.hpp  draconic_sorcerer_lvl_3.cpp  draconic_sorcerer_lvl_3.hpp  draconic_sorcerer_lvl_5.cpp  draconic_sorcerer_lvl_5.hpp  fighter_lvl_1.cpp  fighter_lvl_1.hpp  (+78 more)
c++/core/: action_resolver.cpp  action_resolver.hpp  attack_fsm.hpp  battle_map.cpp  battle_map.hpp  combatant.cpp  combatant.hpp  conditions.cpp  conditions.hpp  coords.cpp  coords.hpp  feasibility.cpp  feasibility.hpp  geometry.cpp  geometry.hpp  interfaces.hpp  logger.cpp  logger.hpp  misc.cpp  misc.hpp  obstacle.cpp  obstacle.hpp  operator_overloads.hpp  rechargeable_factory.cpp  rechargeable_factory.hpp  rectangle.hpp  resources.cpp  resources.hpp  round_manager.cpp  round_manager.hpp  session.cpp  session.hpp  spellslots.cpp  spellslots.hpp  state_machine.cpp  state_machine.hpp  teams.cpp  teams.hpp  threat_modifiers.hpp  threat_utils.cpp  (+4 more)
c++/effects/: action_enabler_effect.hpp  aoe_effect.cpp  aoe_effect.hpp  aoe_spheric_effect.hpp  aoe_square_effect.hpp  combatant_effect.cpp  combatant_effect.hpp  effect.hpp  effect_tracker.cpp  effect_tracker.hpp  limited_duration_effect.cpp  limited_duration_effect.hpp  shperic_aoe.cpp  spheric_aoe.cpp  spheric_aoe.hpp  square_aoe.cpp  square_aoe.hpp
c++/spells/: armor_of_agathys.cpp  armor_of_agathys.hpp  bane.cpp  bane.hpp  bless.cpp  bless.hpp  blink.cpp  blink.hpp  charm_person.cpp  charm_person.hpp  cloud_of_daggers.cpp  cloud_of_daggers.hpp  color_spray.cpp  color_spray.hpp  cure_wounds.cpp  cure_wounds.hpp  darkness.cpp  darkness.hpp  dissonant_whispers.cpp  dissonant_whispers.hpp  eldritch_blast.cpp  eldritch_blast.hpp  faerie_fire.cpp  faerie_fire.hpp  fireball.cpp  fireball.hpp  firebolt.cpp  firebolt.hpp  flaming_sphere.cpp  flaming_sphere.hpp  guiding_bolt.cpp  guiding_bolt.hpp  healing_word.cpp  healing_word.hpp  hex.cpp  hex.hpp  hold_person.cpp  hold_person.hpp  hunger_of_hadar.cpp  hunger_of_hadar.hpp  (+36 more)
c++/test/: CMakeLists.txt  actoid_for_test.hpp  test_abilities.cpp  test_bard.cpp  test_battle_map.cpp  test_beasts.cpp  test_brown_bear.cpp  test_cleric.cpp  test_combat_scenarios.cpp  test_combatant.cpp  test_draconic_sorcerer.cpp  test_fighter.cpp  test_geometry.cpp  test_grapple.cpp  test_misc.cpp  test_moon_druid.cpp  test_paladin.cpp  test_resources.cpp  test_rogue.cpp  test_rogue_scenarios.cpp  test_spell_advantage.cpp  test_state_machine.cpp  test_threat.cpp  test_warlock.cpp  test_weapon_masteries.cpp  test_wild_heart_barbarian.cpp  test_wizard.cpp
credits_refresh/: Dockerfile  Makefile  credits_refresh.py  pyproject.toml
doc/: ILP.tex  limitations.txt  notes.txt  todos.txt
simulator/: ability.py  action.py  action_factory.py  action_resolver.py  action_types.py  actions.py  actoid.py  attack.py  battle_map.py  character.py  combat_manager.py  combatant.py  combatant_coords.py  conditions.py  dash.py  dodge.py  effect_tracker.py  eligible_coords.py  feasibility.py  (+21 more)
(+265 files in other folders)
