[tool.poetry]
name = "encounterra"
version = "0.1.0"
description = ""
authors = ["Martin Zeman <zemanm9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
scipy = "^1.09.1"
transitions = "^0.9.0"
multipledispatch = "^0.6.0"
cachetools = "^5.3.0"
toposort = "^1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
colorama = "^0.4.6"
pip = "^23.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
