[tool.poetry]
name = "encounterra"
version = "0.1.0"
description = ""
authors = ["Martin Zeman <zemanm9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25.0"
scipy = "^1.11.2"
transitions = "^0.9.0"
multipledispatch = "^0.6.0"
cachetools = "^5.3.0"
toposort = "^1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pip = "^23.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
