[tool.poetry]
name = "encounterra_credits_refresh_lambda"
version = "0.1.0"
description = ""
authors = ["Martin Zeman <zemanm9@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "^1.28.33"

[tool.poetry.group.dev.dependencies]
pip = "^23.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
